--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     width: 350px;
     height: 235px;
     background: black;
-    border-radius: 5px;
+    border-radius: 8px;
     border-color: black;
 }
 
@@ -34,10 +34,11 @@ body {
     display: inline;
     color: black;
     padding-top: 2px;
+    padding-bottom: 2px;
     text-align: left;
     padding-left: 5px;
     display: flex;
-    font-size: small;
+    font-size: 12px;
     font-family: 'Courier New', Courier, monospace;
     font-style:  normal;
 }
